--- a/scss/blocks/_application.scss
+++ b/scss/blocks/_application.scss
@@ -1,10 +1,20 @@
 .application {
+    position: relative;
     padding-top: 99px;
     padding-bottom: 103px;
     background-image: url('../img/application/application-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        bottom: -2px;
+        background-color: #002e45;
+    }
 }
 
 .application__content {
