--- a/scss/blocks/_cases.scss
+++ b/scss/blocks/_cases.scss
@@ -10,7 +10,7 @@
 
 .cases__item {
     position: relative;
-    width: 660px;
+    // width: 660px;
     height: 450px;
     width: 33.33%;
     display: flex;
@@ -31,6 +31,19 @@
         bottom: 50%;
         transform: translate(0, 40%);
         transition: all 0.35s ease-in-out;
+    }
+
+    @media (max-width: 1400px) {
+        height: 370px;
+    }
+
+    @media (max-width: 1200px) {
+        width: 100%;
+        height: 400px;
+    }
+
+    @media (max-width: 768px) {
+        height: 350px;
     }
 }
 
@@ -64,6 +77,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
+
+    @media (max-width: 1200px) {
+        background-position: top;
+    }
 }
 
 .cases__item5 {
@@ -89,6 +106,10 @@
         opacity: 0;
         transition: all 0.35s ease-in-out;
         transform: translate(0);
+    }
+
+    @media (max-width: 1200px) {
+        background-position: top;
     }
 }
 
@@ -125,10 +146,22 @@
 }
 
 .cases__item-logo {
+    max-width: 500px;
+    max-height: 500px;
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
     transition: all 0.35s ease-in-out;
+
+    @media (max-width: 1380px) {
+        max-width: 300px;
+        max-height: 300px;
+    }
+
+    @media (max-width: 550px) {
+        max-width: 200px;
+        max-height: 200px;
+    }
 }
 
 .cases__item-title {
@@ -136,23 +169,24 @@
     color: #000;
 }
 
-.cases__item-title6 {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translate(0, -50%);
-    font-family: 'BebasNeue', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 80px;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
-    transition: all 0.35s ease-in-out;
-
-}
+// .cases__item-title6 {
+//     position: absolute;
+//     width: 100%;
+//     top: 50%;
+//     transform: translate(0, -50%);
+//     font-family: 'BebasNeue', sans-serif;
+//     font-weight: 400;
+//     font-style: normal;
+//     font-size: 80px;
+//     color: #fff;
+//     text-align: center;
+//     text-transform: uppercase;
+//     transition: all 0.35s ease-in-out;
+// }
 
 .cases__item-desc {
+    padding-left: 10px;
+    padding-right: 10px;
     position: absolute;
     bottom: -100%;
     transform: translate(0, -50%);
@@ -162,6 +196,10 @@
     color: #fff;
     text-align: center;
     transition: all 0.35s ease-in-out;
+
+    @media (max-width: 550px) {
+        font-size: 20px;
+    }
 }
 
 .cases__item-desc5 {
@@ -184,5 +222,21 @@
         font-weight: 900;
         font-size: 27px;
         color: #000;
+
+        @media (max-width: 1380px) {
+            font-size: 20px;
+        }
+
+        @media (max-width: 400px) {
+            font-size: 18px;
+        }
+    }
+
+    @media (max-width: 1380px) {
+        font-size: 20px;
+    }
+
+    @media (max-width: 400px) {
+        font-size: 18px;
     }
 }
