--- a/scss/blocks/_base.scss
+++ b/scss/blocks/_base.scss
@@ -1,3 +1,7 @@
+.none {
+    display: none;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -33,6 +37,10 @@ a {
 }
 
 .btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     padding: 19px 79px;
     font-weight: 700;
     font-size: 24px;
@@ -91,12 +99,24 @@ input {
         line-height: 24px;
         color: #afafaf;
     }
+
+    @media (max-width: 768px) {
+        padding: 10px 20px;
+    }
 }
 
 .title {
     font-weight: 900;
     font-size: 50px;
     color: #fff;
+
+    @media (max-width: 768px) {
+        font-size: 35px;
+    }
+
+    @media (max-width: 500px) {
+        font-size: 25px;
+    }
 }
 
 .real-checkbox {
@@ -141,4 +161,12 @@ input {
     font-weight: 500;
     font-size: 14px;
     color: #fff;
+
+    @media (max-width: 550px) {
+        font-size: 12px;
+    }
+
+    @media (max-width: 450px) {
+        font-size: 10px;
+    }
 }
