--- a/scss/blocks/_presentation.scss
+++ b/scss/blocks/_presentation.scss
@@ -5,6 +5,25 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    @media (max-width: 1200px) {
+        padding-top: 250px;
+        padding-bottom: 400px;
+    }
+
+    @media (max-width: 768px) {
+        padding-top: 200px;
+        padding-bottom: 350px;
+    }
+
+    @media (max-width: 600px) {
+        padding-bottom: 280px;
+    }
+
+    @media (max-width: 400px) {
+        padding-top: 150px;
+        padding-bottom: 150px;
+    }
 }
 
 .presentation__content {
@@ -14,11 +33,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: baseline;
+
+    @media (max-width: 1030px) {
+        left: 50%;
+        transform: translate(-50%, 0);
+        align-items: center;
+    }
 }
 
 .presentation__title {
     margin-bottom: 40px;
     color: #062b50;
+
+    @media (max-width: 1030px) {
+        text-align: center;
+    }
 }
 
 .presentation__undertitle {
@@ -26,6 +55,23 @@
     font-weight: 500;
     font-size: 26px;
     color: #062b50;
+
+    @media (max-width: 1030px) {
+        text-align: center;
+    }
+
+    @media (max-width: 768px) {
+        margin-bottom: 70px;
+        font-size: 20px;
+    }
+
+    @media (max-width: 550px) {
+        margin-bottom: 50px;
+    }
+
+    @media (max-width: 450px) {
+        font-size: 18px;
+    }
 }
 
 .presentation__btn {
@@ -37,5 +83,18 @@
         border: 3px solid #fff;
         background-color: #1e2c34;
         color: #fff;
+    }
+
+    @media (max-width:768px) {
+        font-size: 20px;
+    }
+
+    @media (max-width: 500px) {
+        padding: 15px 20px;
+        width: 100%;
+    }
+
+    @media (max-width: 450px) {
+        font-size: 18px;
     }
 }
