--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "blocks/application";
 @import "blocks/cases";
 @import "blocks/presentation";
+@import "blocks/clients";
 @import "blocks/reviews";
 @import "blocks/team";
 @import "blocks/questions";
