--- a/css/main.css
+++ b/css/main.css
@@ -1200,6 +1200,8 @@ input:-ms-input-placeholder {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cases__content {
@@ -2290,5 +2292,331 @@ input:-ms-input-placeholder {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.modal__wrap_form,
+.modal__wrap_thanks {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background: rgba(37, 37, 37, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
+.modal__wrap_form_active,
+.modal__wrap_thanks_active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal__form-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 700px;
+  padding: 45px;
+  background: #1A3B60;
+}
+
+@media (max-width: 740px) {
+  .modal__form-wrap {
+    width: 575px;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal__form-wrap {
+    padding: 25px;
+    width: 400px;
+  }
+}
+
+@media (max-width: 420px) {
+  .modal__form-wrap {
+    width: 290px;
+  }
+}
+
+.modal__thanks-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 400px;
+  padding: 45px;
+  background: #1A3B60;
+}
+
+@media (max-width: 420px) {
+  .modal__thanks-wrap {
+    width: 300px;
+    padding: 20px;
+  }
+}
+
+.modal__form-close,
+.modal__thanks-close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.modal__form-close span,
+.modal__thanks-close span {
+  position: relative;
+  width: 40px;
+  height: 2px;
+  background-color: #fff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.modal__form-close span::before,
+.modal__thanks-close span::before {
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 2px;
+  background-color: #fff;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+@media (max-width: 600px) {
+  .modal__form-close span::before,
+  .modal__thanks-close span::before {
+    width: 25px;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal__form-close span,
+  .modal__thanks-close span {
+    width: 25px;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal__form-close,
+  .modal__thanks-close {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@media (max-width: 420px) {
+  .modal__form-close,
+  .modal__thanks-close {
+    right: 10px;
+    top: 10px;
+  }
+}
+
+.form__title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.modal__form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal__cols-wrap {
+  margin-bottom: 20px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal__form-col {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.modal__form-col input {
+  width: 47%;
+}
+
+@media (max-width: 600px) {
+  .modal__form-col input {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .modal__form-col {
+    margin-bottom: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+}
+
+.form__input-name {
+  width: 47%;
+  position: relative;
+}
+
+.form__input-name span {
+  position: absolute;
+  top: 50%;
+  left: 110px;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  font-weight: 500;
+  font-size: 18px;
+  color: #c60000;
+}
+
+@media (max-width: 600px) {
+  .form__input-name span {
+    top: 30%;
+  }
+}
+
+.form__input-name input {
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .form__input-name {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+}
+
+.form__input-tel {
+  width: 47%;
+  position: relative;
+}
+
+.form__input-tel span {
+  position: absolute;
+  top: 50%;
+  left: 210px;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  font-weight: 500;
+  font-size: 18px;
+  color: #c60000;
+}
+
+@media (max-width: 600px) {
+  .form__input-tel span {
+    top: 30%;
+  }
+}
+
+.form__input-tel input {
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .form__input-tel {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+}
+
+.form__btn {
+  width: 47%;
+  padding-top: 9px;
+  padding-bottom: 10px;
+  background-color: transparent;
+}
+
+.form__btn:hover {
+  border: 3px solid #002e45;
+  background-color: #fff;
+  color: #002e45;
+}
+
+@media (max-width: 600px) {
+  .form__btn {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 420px) {
+  .form__btn {
+    width: 100%;
+  }
+}
+
+.modal__thanks-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.modal__thanks-content p {
+  margin-bottom: 30px;
+  font-size: 30px;
+  color: #fff;
+}
+
+.modal__thanks-content p:last-child {
+  margin-bottom: 0;
 }
 /*# sourceMappingURL=main.css.map */
