--- a/scss/blocks/_application.scss
+++ b/scss/blocks/_application.scss
@@ -209,5 +209,7 @@
     label {
         display: flex;
         align-items: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
