--- a/scss/blocks/_modals.scss
+++ b/scss/blocks/_modals.scss
@@ -150,18 +150,44 @@
     width: 47%;
     position: relative;
 
-    span {
+    // span {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 110px;
+    //     transform: translate(0, -50%);
+    //     font-weight: 500;
+    //     font-size: 18px;
+    //     color: #c60000;
+
+    //     @media (max-width: 600px) {
+    //         top: 30%;
+    //     }
+    // }
+
+    label {
         position: absolute;
         top: 50%;
-        left: 110px;
+        left: 24px;
         transform: translate(0, -50%);
+        font-family: 'MuseoSans', sans-serif;
+        font-style: normal;
         font-weight: 500;
         font-size: 18px;
-        color: #c60000;
+        line-height: 24px;
+        color: #afafaf;
 
-        @media (max-width: 600px) {
-            top: 30%;
+        span {
+            font-weight: 500;
+            font-size: 18px;
+            color: #c60000;
         }
+    }
+
+    input:valid + label{
+        display: none;
+    }
+    input:focus + label{
+        display: none;
     }
 
     input {
@@ -178,18 +204,44 @@
     width: 47%;
     position: relative;
 
-    span {
+    // span {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 210px;
+    //     transform: translate(0, -50%);
+    //     font-weight: 500;
+    //     font-size: 18px;
+    //     color: #c60000;
+
+    //     @media (max-width: 600px) {
+    //         top: 30%;
+    //     }
+    // }
+
+    label {
         position: absolute;
         top: 50%;
-        left: 210px;
+        left: 24px;
         transform: translate(0, -50%);
+        font-family: 'MuseoSans', sans-serif;
+        font-style: normal;
         font-weight: 500;
         font-size: 18px;
-        color: #c60000;
+        line-height: 24px;
+        color: #afafaf;
 
-        @media (max-width: 600px) {
-            top: 30%;
+        span {
+            font-weight: 500;
+            font-size: 18px;
+            color: #c60000;
         }
+    }
+
+    input:valid + label{
+        display: none;
+    }
+    input:focus + label{
+        display: none;
     }
 
     input {
