--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -86,4 +86,9 @@
     @media (max-width: 500px) {
         font-size: 18px;
     }
+
+    @media (max-width: 350px) {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
 }
