--- a/css/main.css
+++ b/css/main.css
@@ -2434,7 +2434,8 @@ input:-ms-input-placeholder {
   z-index: 5;
   background: rgba(37, 37, 37, 0.5);
   -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  z-index: 11;
 }
 
 .modal__wrap_form_active,
@@ -2650,6 +2651,12 @@ input:-ms-input-placeholder {
   color: #c60000;
 }
 
+@media (max-width: 600px) {
+  .form__input-name label {
+    top: 37%;
+  }
+}
+
 .form__input-name input:valid + label {
   display: none;
 }
@@ -2695,6 +2702,12 @@ input:-ms-input-placeholder {
   font-weight: 500;
   font-size: 18px;
   color: #c60000;
+}
+
+@media (max-width: 600px) {
+  .form__input-tel label {
+    top: 37%;
+  }
 }
 
 .form__input-tel input:valid + label {
